force-app/main/default/objects/AcctPlanGroupPort__c/AcctPlanGroupPort__c.object-meta.xml
<CustomObject>
    <label>Account Plan Group Port</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AcctPlanGroupPort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AcctPlanGroupPorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>