force-app/main/default/objects/AcctPlanGroupPort__c/fields/Account_Plan_Group_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Group_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Group Profile</label>
    <referenceTo>AcctPlanGroupProfile__c</referenceTo>
    <relationshipName>AcctPlanGroupPorts</relationshipName>
    <type>Lookup</type>
</CustomField>