force-app/main/default/objects/AcctPlanGroupPort__c/fields/Account_Plan_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Portfolio</label>
    <referenceTo>AcctPlanPortfolio__c</referenceTo>
    <relationshipName>AcctPlanGroupPorts</relationshipName>
    <type>Lookup</type>
</CustomField>