force-app/main/default/objects/AcctPlanGroupPort__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>if( isnull(Account_Plan_Group_Profile__c), 
TEXT(Account_Plan_Group_Profile__r.Year__c) , 
TEXT(Account_Plan_Portfolio__r.Year__c))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>